[gd_scene load_steps=14 format=3 uid="uid://dfqg3lsxtup4c"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_bu5g7"]
[ext_resource type="FontFile" uid="uid://iswb6pwnyrki" path="res://Assets/Xolonium-Regular.ttf" id="2_2w4e8"]
[ext_resource type="Script" path="res://Scripts/button.gd" id="3_5yw8f"]
[ext_resource type="Texture2D" uid="uid://copbogcxe3y8u" path="res://Assets/Icons/back_icon.png" id="4_qxao6"]
[ext_resource type="PackedScene" path="res://Scenes/click_sound.tscn" id="5_b203q"]

[sub_resource type="InputEventAction" id="InputEventAction_iiiyb"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_t1t37"]
events = [SubResource("InputEventAction_iiiyb")]

[sub_resource type="Animation" id="Animation_rk00i"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6o5sp"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yiur8"]
_data = {
"appear": SubResource("Animation_rk00i"),
"fade": SubResource("Animation_6o5sp")
}

[sub_resource type="Animation" id="Animation_yfp4c"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Score:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Message:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FunctionButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6weqi"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Score:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Message:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StartButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FunctionButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5xwjr"]
_data = {
"appear": SubResource("Animation_yfp4c"),
"fade": SubResource("Animation_6weqi")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bu5g7")

[node name="Score" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 32.0
offset_right = 24.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_2w4e8")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2w4e8")
theme_override_font_sizes/font_size = 50
text = "Sudden Death"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -208.0
offset_right = 96.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2w4e8")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_t1t37")
text = "Start"
script = ExtResource("3_5yw8f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StartButton"]
libraries = {
"": SubResource("AnimationLibrary_yiur8")
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5xwjr")
}

[node name="FunctionButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 24.0
offset_top = 40.0
offset_right = 88.0
offset_bottom = 104.0
icon = ExtResource("4_qxao6")
expand_icon = true

[node name="Top10Score" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -176.0
offset_right = 160.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2w4e8")
theme_override_font_sizes/font_size = 30
text = "New Top 10 Score!"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -104.0
offset_right = 176.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2w4e8")
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter your name"
alignment = 1

[node name="SetButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2w4e8")
theme_override_font_sizes/font_size = 30
text = "Set"

[node name="ClickSound" parent="." instance=ExtResource("5_b203q")]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="FunctionButton" to="." method="_on_function_button_pressed"]
